[package]
name = "invis-url"
version = "0.1.0"
authors = ["Draylar"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.5"
rocket_contrib = "0.4.2"
serde = { version = "1.0.117", features = ["derive"] }
serde_json = "1.0.59"